--- a/apps.json
+++ b/apps.json
@@ -1548,7 +1548,7 @@
       {"name":"hidjoystick.img","url":"app-icon.js","evaluate":true}
     ]
   },
-  { "id": "HMS",
+  { "id": "hms",
     "name": "Hours Minutes Seconds",
     "shortName":"HMS",
     "icon": "HMSclock.png",
@@ -1556,8 +1556,8 @@
     "description": "Just to test Bangle.js processing speed",
     "tags": "",
     "storage": [
-      {"name":"HMS.app.js","url":"HMSclock.js"},
-      {"name":"HMS.img","url":"HMSclock-icon.js","evaluate":true}
+      {"name":"hms.app.js","url":"HMSclock.js"},
+      {"name":"hms.img","url":"HMSclock-icon.js","evaluate":true}
     ]
   }
 ]
